# cmake-metal-example

./: CMakeLists.txt  README.md  compile.sh
src/: kernel.metal  main.cpp
